--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@ body, h1, h2, h3, form, input {
   font-family: "Roboto Mono", monospace;
 }
 
+@media screen and (max-width: 600px) {
+  .page {
+    padding: 0;
+    font-size: 14px;
+  }
+}
+
 .todo {
   max-width: 600px;
   margin: 0 auto;
@@ -96,6 +103,19 @@ body, h1, h2, h3, form, input {
 .todo__progress::-moz-progress-value {
   -webkit-transition: width 0.3s linear;
   transition: width 0.3s linear;
+}
+
+@media screen and (max-width: 600px) {
+  .todo {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .todo__settings {
+    width: 90%;
+  }
+  .todo__body {
+    padding: 5px;
+  }
 }
 
 .settings {
@@ -236,6 +256,27 @@ body, h1, h2, h3, form, input {
 .settings-toggle--active {
   -webkit-transform: translateY(-50%) translateX(100%) rotate(180deg);
           transform: translateY(-50%) translateX(100%) rotate(180deg);
+}
+
+@media screen and (max-width: 600px) {
+  .settings__form {
+    text-align: center;
+  }
+  .settings__title {
+    vertical-align: middle;
+  }
+  .settings__check-fake {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .settings-toggle {
+    width: 25px;
+    height: 25px;
+    left: 5px;
+  }
 }
 
 .task {
@@ -458,36 +499,15 @@ body, h1, h2, h3, form, input {
 }
 
 @media screen and (max-width: 600px) {
-  .page {
-    padding: 0;
-    font-size: 14px;
-  }
-  .todo {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-  }
-  .todo__settings {
-    width: 90%;
-  }
-  .todo__body {
-    padding: 5px;
-  }
-  .settings__form {
-    text-align: center;
-  }
-  .settings__title {
-    vertical-align: middle;
-  }
-  .settings__check-fake {
-    display: block;
-    margin: 0 auto;
-  }
   .task {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
   .task:not(:last-child) {
     margin-bottom: 10px;
+  }
+  .task:first-child {
+    margin-bottom: 20px;
   }
   .task__date {
     left: 36px;
@@ -507,14 +527,6 @@ body, h1, h2, h3, form, input {
   }
   .task--date-active:not(:last-child) {
     margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .settings-toggle {
-    width: 25px;
-    height: 25px;
-    left: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
