--- a/css/style.scss
+++ b/css/style.scss
@@ -1,394 +1,5 @@
-$color-main: #2fb6cf;
-$color-second: #5ebe7f;
-$color-gray: #e2e2e2;
-$color-gray-light: #eeeeee;
-$font-main: 'Roboto Mono', monospace;
-
-
-body, h1, h2, h3, form, input {
-    margin: 0;
-    padding: 0;
-}
-
-
-.page {
-    padding: 20px;
-    font-family: $font-main;
-}
-
-
-.todo {
-    max-width: 600px;
-    margin: 0 auto;
-    background-color: $color-gray;
-    box-shadow: 4px 4px 0 rgba($color: #000000, $alpha: 0.4);
-    overflow: hidden;
-    &__header {
-        position: relative;
-        z-index: 2;
-        height: 50px;
-        text-align: center;
-    }
-    &__title {
-        position: relative;
-        z-index: 11;
-        font-size: 36px;
-        line-height: 50px;
-        font-weight: normal;
-        background-color: $color-main;
-        user-select: none;
-    }
-    &__settings {
-        position: absolute;
-        z-index: 10;
-        left: 50%;
-        bottom: 0;
-        width: 75%;
-        transform: translate(-50%, -10%);
-        transition: transform 0.3s ease-in;
-    }
-    &__settings--active {
-        transform: translate(-50%, 100%);
-    }
-    &__body {
-        padding: 20px;
-    }
-    &__progress {
-        display: block;
-        width: 100%;
-        height: 25px;
-        margin-top: 20px;
-        border: none;
-        appearance: none;
-        box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: height 0.2s ease-in;
-        &::-webkit-progress-bar {
-            background-color: $color-gray-light;
-            border-radius: 0;
-        }
-        &::-moz-progress-bar {
-            background-color: $color-main;
-            background-image: -moz-linear-gradient(to left, $color-main, $color-second);
-            border-radius: 0;
-        }
-        &::-webkit-progress-value {
-            background-image: linear-gradient(to left, $color-main, $color-second);
-            transition: all 0.3s linear;
-        }
-        &::-moz-progress-value {
-            transition: width 0.3s linear;
-        }
-    }
-}
-
-
-.settings {
-    background-color: lighten($color: rgba($color-main,0.9), $amount: 20);
-    border: 3px solid $color-main;
-    border-top: 0;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    box-shadow: inset 0px 0px 5px 2px rgba($color: #000000, $alpha: 0.25);
-    &__form {
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0 10px;
-        text-align: left;
-        box-sizing: border-box;
-    }
-    &__title {
-        line-height: 25px;
-    }
-    &__label {
-        position: relative;
-        display: block;
-        width: 50%;
-        margin: 10px 0;
-        user-select: none;
-    }
-    &__check {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        clip: rect(1px 1px 1px 1px);
-        clip: rect(1px, 1px, 1px, 1px);
-        border: 0;
-        overflow: hidden;
-        &:focus + .settings__check-fake {
-            outline: auto 5px -webkit-focus-ring-color;
-        }
-        &:active:enabled + .settings__check-fake {
-            &::before {
-                background-color: darken($color: #ffffff, $amount: 10);
-            }
-        }
-        &:checked + .settings__check-fake {
-            background-color: $color-main;
-        }
-        &:checked + .settings__check-fake {
-            &::before {
-                transform: translateY(-50%) translateX(20px);
-            }
-        }
-        &:disabled + .settings__check-fake {
-            opacity: 0.7;
-        }
-        &:disabled ~ .settings__title {
-            text-decoration: line-through;
-            opacity: 0.7;
-        }
-    }
-    &__check-fake {
-        position: relative;
-        display: inline-block;
-        width: 50px;
-        height: 25px;
-        background-color: $color-gray;
-        border-radius: 20px;
-        box-shadow: inset 0 0 2px rgba($color: #000000, $alpha: 0.3);
-        vertical-align: text-top;
-        transition: background-color 0.2s ease-in;
-        &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 50%;
-            width: 30px;
-            height: 30px;
-            background-color: #ffffff;
-            border-radius: 50%; 
-            box-shadow: 0 0 3px rgba($color: #000000, $alpha: 0.3);
-            transform: translateY(-50%);
-            transition: transform 0.2s ease-in, background-color 0.2s ease-in;
-        }
-    }
-}
-.settings-toggle {
-    position: absolute;
-    z-index: 15;
-    top: 50%;
-    left: 10px;
-    width: 30px;
-    height: 30px;
-    background-color: transparent;
-    background-image: url('../image/settings.svg');
-    border: 0;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    transform-origin: center;
-    transition: box-shadow 0.2s ease-in, transform 0.3s linear;
-    cursor: pointer;
-    outline: none;
-    &:focus {
-        box-shadow: 0 0 5px rgba($color: #303030, $alpha: 0.7);
-    }
-}
-.settings-toggle--active {
-    transform: translateY(-50%) translateX(100%) rotate(180deg);
-}
-
-
-.task {
-    position: relative;
-    display: flex;
-    transition: opacity 0.2s ease-in, filter 0.2s ease-in, transform 0.3s ease-in, margin 0.3s linear;
-    &:not(:last-child) {
-        margin-bottom: 15px;
-    }
-    &:first-child {
-        margin-bottom: 25px;
-    }
-    &__date {
-        position: absolute;
-        z-index: 1;
-        top: -14px;
-        left: 46px;
-        padding: 0 3px;
-        font-size: 0.8em;
-        font-weight: bold;
-        background-color: $color-second;
-        transition: opacity 0.3s linear;
-    }
-    &__input {
-        flex: 1;
-        margin-right: 6px;
-        padding: 8px;
-        font-size: inherit;
-        background-color: $color-gray-light;
-        border: 3px solid $color-main;
-        border-radius: 0;
-        box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: box-shadow 0.2s ease-in, width 0.2s linear;
-        -webkit-appearance: none;
-        &::placeholder {
-            font-size: inherit;
-        }
-        &:focus {
-            box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.25);
-        }
-    }
-    &__input--price {
-        display: none;
-        max-width: 70px;
-        transition: opacity 0.3s linear;
-    }
-    &__button {
-        width: 40px;
-        height: 40px;
-        background-color: $color-main;
-        background-image: url('../image/plus-icon.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        border: none;
-        box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: box-shadow 0.2s ease-in;
-        cursor: pointer;
-        &:active {
-            box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.25);
-        }
-    }
-    &__button--closing {
-        background-image: url('../image/close-icon.svg');
-    }
-    &__check {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        clip: rect(1px 1px 1px 1px);
-        clip: rect(1px, 1px, 1px, 1px);
-        border: 0;
-        overflow: hidden;
-        &:focus + .task__check-fake {
-            outline: auto 5px -webkit-focus-ring-color;
-        }
-        &:active + .task__check-fake {
-            box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.25);
-        }
-        &:checked + .task__check-fake {
-            background-image: url('../image/check-icon.svg');
-        }
-    }
-    &__check-fake {
-        position: relative;
-        display: block;
-        margin-right: 6px;
-        background-image: url('../image/uncheck-icon.svg');
-    }
-}
-.task--invalid {
-    animation: invalid 0.3s forwards ease-in;
-}
-.task--completed {
-    text-decoration: line-through;
-    opacity: 0.7;
-    filter: grayscale(0.7);
-}
-.task--removed {
-    transform: translateX(-100%);
-}
-.task--hidden {
-    position: absolute;
-    width: 0;
-    height: 0;
-    clip: rect(1px 1px 1px 1px);
-    visibility: hidden;
-}
-.task--theme-second .task__input {
-    border-color: $color-second;
-}
-.task--theme-second .task__button {
-    background-color: $color-second;
-}
-.task--date-active {
-    &:not(:last-child) {
-        margin-bottom: 30px;
-    }
-}
-
-
-
-@keyframes invalid {
-    0% {
-        transform: translate(0,0);
-    }
-    25% {
-        transform: translate(-3px,0);
-    }
-    50% {
-        transform: translate(0,0);
-    }
-    75% {
-        transform: translate(3px,0);
-    }
-    100% {
-        transform: translate(0);
-    }
-}
-
-
-@media screen and (max-width: 600px) {
-    
-    .page {
-        padding: 0; 
-        font-size: 14px;
-    }
-    .todo {
-        box-shadow: none;
-        &__settings {
-            width: 90%;
-        }
-        &__body {
-            padding: 5px;
-        }
-    }
-    .settings {
-        &__form {
-            text-align: center;
-        }
-        &__title {
-            vertical-align: middle;
-        }
-        &__check-fake {
-            display: block;
-            margin: 0 auto;
-        }
-    }
-
-    .task {
-        flex-wrap: wrap;
-        &:not(:last-child) {
-            margin-bottom: 10px;
-        }
-        &__date {
-            left: 36px;
-        }
-        &__input {
-            width: 100%;
-            padding: 4px;
-            border-width: 2px;
-        }
-        &__input--price {
-            max-width: 55px;
-        }
-        &__button {
-            width: 30px;
-            height: 30px;
-            background-size: 70%;
-        }
-    }
-    .task--date-active {
-        &:not(:last-child) {
-            margin-bottom: 20px;
-        }
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .settings-toggle {
-        width: 25px;
-        height: 25px;
-        left: 5px;
-    }
-}
+@import 'variables';
+@import 'common';
+@import 'todo';
+@import 'settings';
+@import 'task';
